--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-librar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/MohammedAlDahleh/Movies-Librar#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "nodemon": "^2.0.16"
   }
 }
